shanoir-issue#1507: selected subject tag is added only once + CSS on columns that were overlapping

--- a/shanoir-ng-front/src/app/shared/components/table/table.component.css
+++ b/shanoir-ng-front/src/app/shared/components/table/table.component.css
@@ -47,11 +47,12 @@ tr { height: 21px; }
 	tr.selected:not(.disabled):not(.edit):hover td:not(.loading):not(.empty) { background-color: var(--grey); cursor: pointer; }
  	tr.selected { background-color: lightsteelblue; }
 tr.disabled { opacity: 0.7; }
-td { padding: 0 5px; border: none; white-space: nowrap; text-overflow: ellipsis; position: relative; height: 100%; }
-	td + td { border-left: 1px solid var(--light-grey); }
+td:nth-child(2) { padding: 0 5px; border: none; height: 100%; overflow: auto; white-space: inherit;}
+td { padding: 0 5px; border: none; white-space: nowrap; height: 100%; text-overflow: ellipsis; overflow: hidden;}
+    td + td { border-left: 1px solid var(--light-grey); }
 	td.bool, td.progress { text-align: center; }
 	td.cell input:not([type='checkbox']), td.cell select { width: auto; border: none; padding-right: 10px; }
-	td.cell-date { text-align: right; }
+	td.cell-date { text-align: right;  }
 	td.cell-number { text-align: right; }
 	td.cell-nofield { text-align: center; }
 	td span.button { max-height: 20px; max-width: 20px; cursor: pointer; }
@@ -60,7 +61,7 @@ td { padding: 0 5px; border: none; white-space: nowrap; text-overflow: ellipsis;
 	td.loading,
 	td.empty { padding: 20px 20px; text-align: center; }
 	.cell-container:not(.select) { overflow: hidden; text-overflow: ellipsis; }
-	.cell-container.multiselect, .cell-container.wrap { white-space: initial; width: auto; height: 100%; }
+	.cell-container.multiselect, .cell-container.wrap { white-space: initial; width: auto; height: 100%;  }
 	/*.cell-container:empty:after { content: '.'; visibility: hidden; }*/
   .cell-new-tab { line-height:21px; height: inherit; display: block; text-decoration: none; color: black; width: auto; }
 
